// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render EntryForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    className="title"
    onChange={[Function]}
    placeholder="Title (optional)"
    type="text"
    value=""
  />
  <hr
    className="horizontal-line"
  />
  <textarea
    className="text-area"
    onChange={[Function]}
    placeholder="Describe your experience here..."
    rows="10"
    value=""
  />
  <div
    className="createdAt-section"
  >
    <p
      className="createdAt-section__text"
    >
      01 Jan 1970 01:00
    </p>
    <button
      className="edit-button"
      onClick={[Function]}
      type="button"
    >
      <Component
        class="edit-icon"
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f044",
              "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
            ],
            "iconName": "edit",
            "prefix": "fas",
          }
        }
      />
    </button>
  </div>
  <Component />
  <div
    className="button-container"
  >
    <div
      className="remove-button-container"
    />
    <div
      className="other-button-container"
    >
      <button
        className="button button--right"
        type="submit"
      >
        Save
      </button>
      <button
        className="button button--right button--cancel"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</form>
`;

exports[`should render EntryForm correctly with entry data and delete button 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    className="title"
    onChange={[Function]}
    placeholder="Title (optional)"
    type="text"
    value="title"
  />
  <hr
    className="horizontal-line"
  />
  <textarea
    className="text-area"
    onChange={[Function]}
    placeholder="Describe your experience here..."
    rows="10"
    value="This is another entry"
  />
  <div
    className="createdAt-section"
  >
    <p
      className="createdAt-section__text"
    >
      01 Jan 1970 00:59
    </p>
    <button
      className="edit-button"
      onClick={[Function]}
      type="button"
    >
      <Component
        class="edit-icon"
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f044",
              "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
            ],
            "iconName": "edit",
            "prefix": "fas",
          }
        }
      />
    </button>
  </div>
  <Component />
  <div
    className="button-container"
  >
    <div
      className="remove-button-container"
    >
      <button
        className="button button--delete"
        onClick={[Function]}
        type="button"
      >
        Delete
      </button>
    </div>
    <div
      className="other-button-container"
    >
      <button
        className="button button--right"
        type="submit"
      >
        Save
      </button>
      <button
        className="button button--right button--cancel"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</form>
`;
